frontend basically finished

--- a/index.html
+++ b/index.html
@@ -5,44 +5,39 @@
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
-    <div containerOne >
+    <div class="containerOne" >
         <div class ="fText">
             <h1>Rock Paper Scissors</h1>
-            <h2>Choose your weapon!</h2>
+            <h1>Choose your weapon!</h1>
         </div>
     </div>
-    <div containerTwo >
+    <div class="containerTwo" >
         <div class = "boxHolder">
             <div class = "box">
                 <img src="images/rock.png" alt="Rock" width="150" height="150">
-                <button class="button" onclick="myFunction()">Rock</button>
             </div>
             <div class = "box">
                 <img src="images/paper.png" alt="Paper" width="150" height="150">
-                <button class="button" onclick="myFunction()">Paper</button>
             </div>
             <div class = "box">
                 <img src="images/scissors.png" alt="Scissors" width="150" height="150">
-                <button class="button" onclick="myFunction()">Scissors</button>
             </div>
     </div>
-    <div containerThree >
+    </div>
+    <div class="containerThree" >
         <div class="pC">
-            <h2>Player Choice</h2>
-            <h2>Computer Choice</h2>
-        </div>
-
-        <div class="scoreHolder">
-            <div class="pScore">
-
+            <div class="scoreHolder">
+                <div class="pScore">
+                    <h2>Player Choice</h2>
+                    <h1>0</h1>
+                </div>
+                <div class="cScore">
+                    <h2>Computer Choice</h2>
+                    <h1>0</h1>
+                </div>
             </div>
-            <div class="cScore">
-                
-            </div>
         </div>
-
     </div>
-
 
     <script>
     
