--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         if (playerCounter === 5) {
             fMessage.textContent = 'You have beat the computer virus from infecting the Earth!';
         } else if (computerCounter === 5) {
-            fMessage = 'Humanity has fallen..';
+            fMessage.textContent = 'Humanity has fallen..';
         }
         }
 
