--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         </div>
     </div>
 
+    <div class="containerSix" >
+        <div id = "try">
+            
+        </div>
+    </div>
+
     <script>
     let playerCounter = 0;
     let computerCounter = 0;
@@ -67,7 +73,21 @@
 
     const message = document.querySelector('#message');
     const fMessage = document.querySelector('#fMessage');
+    const tMessage = document.createElement('#tMessage');
+
+    const tryAgain = document.querySelector('#try');
+    const tryButt = document.createElement('button');
     
+    tryButt.addEventListener ('click', () => {
+        playerCounter = 0;
+        computerCounter = 0;
+        playerScore.textContent = playerCounter;
+        computerScore.textContent = computerCounter;
+        message.textContent = '';
+        fMessage.textContent = '';
+        tryAgain.removeChild(tryButt);
+    })
+
     playerScore.textContent = playerCounter;
     computerScore.textContent = computerCounter;
 
@@ -133,8 +153,12 @@
 
         if (playerCounter === 5) {
             fMessage.textContent = 'You have beat the computer virus from infecting the Earth!';
+            tryAgain.appendChild(tryButt);
+            tryButt.textContent = 'Play Again';
         } else if (computerCounter === 5) {
             fMessage.textContent = 'Humanity has fallen..';
+            tryAgain.appendChild(tryButt);
+            tryButt.textContent = 'Try Again';
         }
         }
 
