fixed outro coloring and increased size of rps

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                 if (playerCounter < 5 && computerCounter < 5) {
                 if (playerSelection === computerSelection) {
-                    message.textContent = "It's a tie!";
+                    message.textContent = "Stop copying the virus!";
                 } else if (playerSelection === 'rock') {
                     if (computerSelection === 'paper') {
                     computerCounter += 1;
